--- a/buscadorGithub/src/app/pages/results/results.component.scss
+++ b/buscadorGithub/src/app/pages/results/results.component.scss
@@ -2,14 +2,11 @@
 
 .results {
     padding: 2rem 0 2rem 0;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
 }
+
 .user-card {
-    
+    width: 20rem;
 }
 
 .repos {
@@ -19,11 +16,9 @@
     padding: 0 1rem 0 1rem;
     &__repo {
 
-        @include centralizar (true, false);
         display: flex;
         align-items: center;
         gap: 2rem;
-    
         max-width: 40rem;
 
         cursor: pointer;
@@ -57,11 +52,38 @@
 }
 
 
-@media screen and (max: 749px) {
+@media screen and (max-width: 749px) {
+
+    .results {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        align-items: center;
+        justify-content: center;
+    }
+    .user-card {
+
+    }
     .repos {
         &__repo {
             flex-direction: column;
             gap: 1rem;
         }
+    }
+}
+
+@media screen and (min-width: 748px) {
+    .user-card {
+        position: fixed;
+        top: 50%;
+        left: 25%;
+        transform: translate(-50%, -50%);
+    }
+
+    .repos {
+        position: relative;
+        width: 40%;
+        left: 50%;
+
     }
 }
