--- a/buscadorGithub/src/app/components/user-card/user-card.component.html
+++ b/buscadorGithub/src/app/components/user-card/user-card.component.html
@@ -3,7 +3,7 @@
     <mat-card-title>{{this.userinfo.name}}</mat-card-title>
     <mat-card-subtitle>@{{this.userinfo.login}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src={{this.userinfo.avatar_url}} alt="Photo of a Shiba Inu">
+  <img mat-card-image src={{this.userinfo.avatar_url}} alt="User avatar">
   <mat-card-content>
     <p>
       {{this.userinfo.bio}}
