--- a/buscadorGithub/src/app/pages/index-page/index-page.component.html
+++ b/buscadorGithub/src/app/pages/index-page/index-page.component.html
@@ -1,1 +1,5 @@
-<app-buscador></app-buscador> 
+<div class="index-page">
+    <img src="../../../assets/github.svg" alt="Github logo" class="github-logo">
+    <h2>Buscador Github</h2>
+    <app-buscador></app-buscador> 
+</div>
