--- a/buscadorGithub/src/app/pages/results/results.component.scss
+++ b/buscadorGithub/src/app/pages/results/results.component.scss
@@ -18,7 +18,6 @@
 
         display: flex;
         align-items: center;
-        gap: 2rem;
         max-width: 40rem;
 
         cursor: pointer;
@@ -84,6 +83,10 @@
         position: relative;
         width: 40%;
         left: 50%;
+        &__repo {
+        
+            gap: 2rem;
+        }
 
     }
 }
