novas correcoes de lint

--- a/buscadorGithub/src/app/components/buscador/buscador.component.html
+++ b/buscadorGithub/src/app/components/buscador/buscador.component.html
@@ -11,6 +11,7 @@
     mat-mini-fab 
     color="warn" 
     (click) = 'this.buscar(this.value)'
+    class="buscador__btn"
     >
     <mat-icon>search</mat-icon>
   </button>
